--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -5,16 +5,31 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_home"
-            android:icon="@drawable/ic_menu_camera"
-            android:title="@string/menu_home" />
+            android:title="@string/menu_home">
+            <menu>
+                <item
+                    android:id="@+id/nav_home"
+                    android:icon="@drawable/ic_menu_camera"
+                    android:title="@string/menu_home" />
+            </menu>
+        </item>
         <item
-            android:id="@+id/nav_gallery"
-            android:icon="@drawable/ic_menu_gallery"
-            android:title="@string/menu_gallery" />
+            android:title="@string/menu_task">
+            <menu>
+                <item
+                    android:id="@+id/nav_task"
+                    android:icon="@drawable/ic_menu_gallery"
+                    android:title="@string/menu_task" />
+            </menu>
+        </item>
         <item
-            android:id="@+id/nav_slideshow"
-            android:icon="@drawable/ic_menu_slideshow"
-            android:title="@string/menu_slideshow" />
+            android:title="@string/menu_organization">
+            <menu>
+                <item
+                    android:id="@+id/nav_organization"
+                    android:icon="@drawable/ic_menu_slideshow"
+                    android:title="@string/menu_organization" />
+            </menu>
+        </item>
     </group>
 </menu>
