--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -12,14 +12,14 @@
         tools:layout="@layout/fragment_home" />
 
     <fragment
-        android:id="@+id/nav_gallery"
-        android:name="com.jetchan.dev.ui.gallery.GalleryFragment"
-        android:label="@string/menu_gallery"
-        tools:layout="@layout/fragment_gallery" />
+        android:id="@+id/nav_task"
+        android:name="com.jetchan.dev.ui.task.TaskFragment"
+        android:label="@string/menu_task"
+        tools:layout="@layout/fragment_task" />
 
     <fragment
-        android:id="@+id/nav_slideshow"
-        android:name="com.jetchan.dev.ui.slideshow.SlideshowFragment"
-        android:label="@string/menu_slideshow"
-        tools:layout="@layout/fragment_slideshow" />
+        android:id="@+id/nav_organization"
+        android:name="com.jetchan.dev.ui.organization.OrganizationFragment"
+        android:label="@string/menu_organization"
+        tools:layout="@layout/fragment_organization" />
 </navigation>
