--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,25 +1,37 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.世界与勇士" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.地球与勇士" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
-        <item name="colorOnPrimary">@color/white</item>
+        <item name="colorPrimary">@color/morandi_gentle_powder</item>
+        <item name="colorPrimaryVariant">@color/morandi_gentle_powder</item>
+        <item name="colorOnPrimary">@color/morandi_off_white</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
+        <item name="colorSecondary">@color/morandi_fresh_green</item>
+        <item name="colorSecondaryVariant">@color/morandi_fresh_green</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+        <item name="android:textColor">@color/black</item>
     </style>
 
-    <style name="Theme.世界与勇士.NoActionBar">
+    <style name="Theme.地球与勇士.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
+
     </style>
 
-    <style name="Theme.世界与勇士.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+    <style name="Theme.地球与勇士.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
-    <style name="Theme.世界与勇士.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+    <style name="Theme.地球与勇士.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
+    <style name="Theme.地球与勇士.Starting" parent="Theme.SplashScreen">
+        <item name="windowSplashScreenBackground">@color/morandi_off_white</item>
+        <item name="windowSplashScreenAnimatedIcon">@mipmap/ic_launcher</item>
+        <item name="postSplashScreenTheme">@style/Theme.地球与勇士.NoActionBar</item>
+    </style>
+
+    <style name="RecyclerView">
+        <item name="android:background">@color/morandi_fresh_green</item>
+    </style>
 </resources>
