--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -9,17 +9,23 @@
         android:id="@+id/nav_home"
         android:name="com.jetchan.dev.ui.home.HomeFragment"
         android:label="@string/menu_home"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_home" >
+
+    </fragment>
 
     <fragment
         android:id="@+id/nav_task"
         android:name="com.jetchan.dev.ui.task.TaskFragment"
         android:label="@string/menu_task"
-        tools:layout="@layout/fragment_task" />
+        tools:layout="@layout/fragment_task" >
+
+    </fragment>
 
     <fragment
         android:id="@+id/nav_organization"
         android:name="com.jetchan.dev.ui.organization.OrganizationFragment"
         android:label="@string/menu_organization"
-        tools:layout="@layout/fragment_organization" />
+        tools:layout="@layout/fragment_organization" >
+    </fragment>
+
 </navigation>
