增加: 查询用户任务 优化：无任务、组织时的显示

--- a/app/src/main/res/layout/fragment_organization.xml
+++ b/app/src/main/res/layout/fragment_organization.xml
@@ -17,6 +17,19 @@
         app:layout_constraintTop_toTopOf="parent"
         />
 
+    <TextView
+        android:id="@+id/no_org_text_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:padding="16dp"
+        android:text="@string/no_org"
+        android:textSize="18sp"
+
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/btn_joinOrg"/>
+
     <Button
         android:id="@+id/btn_joinOrg"
         android:layout_width="0dp"
