新增：组织详情页面显示任务 优化：组织详情页面中的id改为int

--- a/app/src/main/res/layout/fragment_org_detail.xml
+++ b/app/src/main/res/layout/fragment_org_detail.xml
@@ -15,4 +15,26 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         />
+
+    <TextView
+        android:id="@+id/no_org_text_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:padding="16dp"
+        android:text="@string/no_org_task"
+        android:textSize="18sp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/btn_publish_task"/>
+
+    <Button
+        android:id="@+id/btn_publish_task"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="@string/publish_task"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
