--- a/app/src/main/res/layout/fragment_org_detail.xml
+++ b/app/src/main/res/layout/fragment_org_detail.xml
@@ -2,22 +2,30 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".ui.organization.OrganizationDetailFragment">
 
-    <include layout="@layout/content_org_base_info" />
+    <include
+        android:id="@+id/content_org_base_info"
+        layout="@layout/content_org_base_info"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_org_tasks"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
         android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/content_org_base_info"
+        app:layout_constraintBottom_toTopOf="@id/btn_publish_task"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        />
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <TextView
-        android:id="@+id/no_org_text_view"
+        android:id="@+id/tv_no_task"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
@@ -32,7 +40,7 @@
         android:id="@+id/btn_publish_task"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="@string/publish_task"
+        android:text="@string/btn_publish_task"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
